[tool.poetry]
name = "patient-kg"
version = "0.0.1"
description = "Knowledge Graph for (german) clinical patient data (ICD10, Snomed CT, Loinc, OPS)"
authors = [
    "Nils Krehl <nils.krehl@stud.uni-heidelberg.de>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# biocypher = "^0.5.32"
biocypher = { git = "https://github.com/biocypher/biocypher.git", branch = "ontology_reverse_id_label_yaml_config" }
jupyterlab = "^4.0.8"
notebook = "^7.0.6"
icd10-cm = "^0.0.5"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pre-commit = ">=2.17.0"
bump2version = "*"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
from_first = true
line_length = 80
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_num="numpy,pandas"
sections = "FUTURE,STDLIB,THIRDPARTY,NUM,FIRSTPARTY,LOCALFOLDER"
no_lines_before="LOCALFOLDER"
balanced_wrapping = true
force_grid_wrap = 0
length_sort = "1"
indent = "    "
profile = "black"

[tool.flake8]
ignore = ["E203", "D200", "D202", "D401", "D105", "W504"]
per-file-ignores = [
    "docs/source/conf.py:D100",
    "tests/*:D100,D101,D102",
    "*/__init__.py:F401"
]
max-line-length = 80
count = true
